# ObjectSlots

./: .gitignore  CMakeLists.txt  README.md
include/ObjectSlots/: ObjectSlots.hpp
src/: ObjectSlots.cpp
testing/: CMakeLists.txt  test_slots.cpp
